--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="colorPrimaryDark">@android:color/holo_green_dark</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
