--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,6 +7,5 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/logo"/>
+        android:layout_centerInParent="true"/>
 </RelativeLayout>
