--- a/app/src/main/res/layout/task_layout.xml
+++ b/app/src/main/res/layout/task_layout.xml
@@ -18,9 +18,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:buttonTint="@color/colorPrimary"
             android:paddingStart="8dp"
-            android:buttonTint="@android:color/holo_green_dark"
-            tools:text="Go to the market and bring vegetables immediately today."/>
+            tools:text="Go to the market and bring vegetables immediately today." />
 
     </RelativeLayout>
 
